--- a/_publications/2021-06-16_FIPS.md
+++ b/_publications/2021-06-16_FIPS.md
@@ -6,8 +6,7 @@ excerpt: 'This paper is about using computer vision to phenotype the components 
 date: 2021-06-16
 venue: 'Frontiers in Plant Science'
 paperurl: ''
-citation: 'Brainard SH, Bustamante JA, Dawson JC, Spalding EP and Goldman IL (2021) A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front. Plant Sci.</i> 12:690031. doi: 10.3389/fpls.2021.690031'
 ---
 This paper is about using computer vision to phenotype the components of market class in <i>Daucus carota</i>.
 
-[Download paper here](https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full)
+You can download this paper [here](https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full).  The image acquisition and pre-processing software is described [here](https://shbrainard.github.io/software/high-throughput-phenotyping), and the PCA-based phenotyping software is located [here](https://github.com/jbustamante35/carrotsweeper) 
