--- a/_publications/2021-11-15_TAAG.md
+++ b/_publications/2021-11-15_TAAG.md
@@ -5,9 +5,7 @@ permalink: /publication/2021-11-15_TAAG
 excerpt: 'This paper is about using GWAS and GEBVs to better understanding the genetic control of of market class in <i>Daucus carota</i>.'
 date: 2021-11-15
 venue: 'Theoretical and Applied Genetics'
-paperurl: ''
-citation: 'Brainard, S.H., Ellison, S.L., Simon, P.W. et al. Genetic characterization of carrot root shape and size using genome-wide association analysis and genomic-estimated breeding values. Theor Appl Genet (2021). https://doi.org/10.1007/s00122-021-03988-8'
 ---
 This paper is about using GWAS and GEBVs to better understanding the genetic control of of market class in <i>Daucus carota</i>.
 
-[Download paper here](https://link.springer.com/article/10.1007%2Fs00122-021-03988-8)
+You can download this paper [here](https://link.springer.com/article/10.1007%2Fs00122-021-03988-8).  SNP marker data, digital images of carrot roots, and extracted phenotypes of the diversity panel used in this paper can be downloaded from the Harvard Dataverse [here](https://dataverse.harvard.edu/dataverse/usda-npgs-carrot-collection).
