--- a/_publications/2021-06-16_FIPS.md
+++ b/_publications/2021-06-16_FIPS.md
@@ -8,4 +8,4 @@ venue: 'Frontiers in Plant Science'
 ---
 This paper is about using computer vision to phenotype the components of market class in <i>Daucus carota</i>.
 
-You can download this paper [here](https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full).  The image acquisition and pre-processing software is described [here](https://shbrainard.github.io/software/high-throughput-phenotyping), and the PCA-based phenotyping software is located [here](https://github.com/jbustamante35/carrotsweeper) 
+You can download this paper [here](https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full).  The image acquisition and pre-processing software is described [here](https://shbrainard.github.io/software/high-throughput-phenotyping), and the PCA-based phenotyping software is located [here](https://github.com/jbustamante35/carrotsweeper).
