--- a/_publications/2021-06-16_FIPS.md
+++ b/_publications/2021-06-16_FIPS.md
@@ -6,6 +6,6 @@ excerpt: 'This paper is about using computer vision to phenotype the components 
 date: 2021-06-16
 venue: 'Frontiers in Plant Science'
 ---
-This paper is about using computer vision to phenotype the components of market class in <i>Daucus carota</i>.
+This paper is described how computer vision can be used to precisely phenotype the components of market class in <i>Daucus carota</i>, and demonstrated the potential of such a method by analyzing the progeny families from a half-diallel mating design.
 
 You can download this paper [here](https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full).  The image acquisition and pre-processing software is described [here](https://shbrainard.github.io/software/high-throughput-phenotyping), and the PCA-based phenotyping software is located [here](https://github.com/jbustamante35/carrotsweeper).
