--- a/_publications/2021-11-15_TAAG.md
+++ b/_publications/2021-11-15_TAAG.md
@@ -6,6 +6,6 @@ excerpt: 'This paper is about using GWAS and GEBVs to better understanding the g
 date: 2021-11-15
 venue: 'Theoretical and Applied Genetics'
 ---
-This paper is about using GWAS and GEBVs to better understanding the genetic control of of market class in <i>Daucus carota</i>.
+This paper is used genome-wide association analysis and genomic-estimated breeding values to characterize the genetic bases of market class in <i>Daucus carota</i>.  The component root shape traits appear to be highly polygenic, but under largely additive genetic control.
 
 You can download this paper [here](https://link.springer.com/article/10.1007%2Fs00122-021-03988-8).  SNP marker data, digital images of carrot roots, and extracted phenotypes of the diversity panel used in this paper can be downloaded from the Harvard Dataverse [here](https://dataverse.harvard.edu/dataverse/usda-npgs-carrot-collection).
