--- a/_publications/2021-06-16_FIPS.md
+++ b/_publications/2021-06-16_FIPS.md
@@ -2,7 +2,7 @@
 title: "A digital image-based phenotyping platform for analyzing root shape attributes in carrot"
 collection: publications
 permalink: /publication/2021-06-16_FIPS
-excerpt: 'This paper is about using computer vision to phenotype the components of market class in <i>Daucus carota</i>.'
+excerpt: 'Using computer vision to phenotype the components of market class in <i>Daucus carota</i>.'
 date: 2021-06-16
 venue: 'Frontiers in Plant Science'
 ---
