--- a/_publications/2021-11-15_TAAG.md
+++ b/_publications/2021-11-15_TAAG.md
@@ -2,10 +2,12 @@
 title: "Genetic characterization of carrot root shape and size using genome-wide association analysisand genomic-estimated breeding values"
 collection: publications
 permalink: /publication/2021-11-15_TAAG
-excerpt: 'This paper is about using GWAS and GEBVs to better understanding the genetic control of of market class in <i>Daucus carota</i>.'
+excerpt: 'GWAS and GEBVs im the genetic control of of market class in <i>Daucus carota</i>.'
 date: 2021-11-15
 venue: 'Theoretical and Applied Genetics'
+link: 'https://doi.org/10.1007/s00122-021-03988-8'
+code: 'https://dataverse.harvard.edu/dataverse/usda-npgs-carrot-collection'
+citation: 'Brainard, S.H., Ellison, S.L., Simon, P.W. et al. Genetic characterization of carrot root shape and size using genome-wide association analysis and genomic-estimated breeding values. <i>Theor Appl Genet</i> (2021). https://doi.org/10.1007/s00122-021-03988-8'
 ---
-This paper is used genome-wide association analysis and genomic-estimated breeding values to characterize the genetic bases of market class in <i>Daucus carota</i>.  The component root shape traits appear to be highly polygenic, but under largely additive genetic control.
 
-You can download this paper [here](https://link.springer.com/article/10.1007%2Fs00122-021-03988-8).  SNP marker data, digital images of carrot roots, and extracted phenotypes of the diversity panel used in this paper can be downloaded from the Harvard Dataverse [here](https://dataverse.harvard.edu/dataverse/usda-npgs-carrot-collection).
+
