--- a/_publications/2021-06-16_FIPS.md
+++ b/_publications/2021-06-16_FIPS.md
@@ -2,10 +2,10 @@
 title: "A digital image-based phenotyping platform for analyzing root shape attributes in carrot"
 collection: publications
 permalink: /publication/2021-06-16_FIPS
-excerpt: 'Using computer vision to phenotype the components of market class in <i>Daucus carota</i>.'
 date: 2021-06-16
 venue: 'Frontiers in Plant Science'
+link: 'https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full'
+code: 'https://dataverse.harvard.edu/dataverse/carrot-market-class'
+github: 'https://github.com/shbrainard/carrot-phenotyping'
+citation: 'Brainard SH, Bustamante JA, Dawson JC, Spalding EP and Goldman IL (2021) A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front. Plant Sci.</i> 12:690031. doi: 10.3389/fpls.2021.690031'
 ---
-This paper is described how computer vision can be used to precisely phenotype the components of market class in <i>Daucus carota</i>, and demonstrated the potential of such a method by analyzing the progeny families from a half-diallel mating design.
-
-You can download this paper [here](https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full).  The image acquisition and pre-processing software is described [here](https://shbrainard.github.io/software/high-throughput-phenotyping), and the PCA-based phenotyping software is located [here](https://github.com/jbustamante35/carrotsweeper).
