--- a/_publications/2021-11-15_TAAG.md
+++ b/_publications/2021-11-15_TAAG.md
@@ -5,6 +5,7 @@ permalink: /publication/2021-11-15_TAAG
 date: 2021-11-15
 venue: 'Theoretical and Applied Genetics'
 link: 'https://doi.org/10.1007/s00122-021-03988-8'
+paperurl: '/files/publications/2021TAAG.pdf'
 code: 'https://dataverse.harvard.edu/dataverse/usda-npgs-carrot-collection'
 citation: 'Brainard, S.H., Ellison, S.L., Simon, P.W. et al. Genetic characterization of carrot root shape and size using genome-wide association analysis and genomic-estimated breeding values. <i>Theor Appl Genet</i> (2021). https://doi.org/10.1007/s00122-021-03988-8'
 ---
