--- a/_publications/2021-06-16_FIPS.md
+++ b/_publications/2021-06-16_FIPS.md
@@ -7,5 +7,6 @@ venue: 'Frontiers in Plant Science'
 link: 'https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full'
 code: 'https://dataverse.harvard.edu/dataverse/carrot-market-class'
 github: 'https://github.com/shbrainard/carrot-phenotyping'
+paperurl: '/files/publications/2021FIPS.pdf'
 citation: 'Brainard SH, Bustamante JA, Dawson JC, Spalding EP and Goldman IL (2021) A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front. Plant Sci.</i> 12:690031. doi: 10.3389/fpls.2021.690031'
 ---
