--- a/_publications/2022-10-29_CS.md
+++ b/_publications/2022-10-29_CS.md
@@ -1,5 +1,5 @@
 ---
-title: "Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F~2:3~ Populations Using a New Table Beet Reference Genome"
+title: "Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome"
 collection: publications
 permalink: /publication/2022-10-29_CS
 date: 2022-10-29
