--- a/_publications/2022-10-29_CS.md
+++ b/_publications/2022-10-29_CS.md
@@ -1,5 +1,5 @@
 ---
-title: "Novel <strong>QTL</strong> Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome"
+title: "Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome"
 collection: publications
 permalink: /publication/2022-10-29_CS
 date: 2022-10-29
@@ -7,7 +7,7 @@ venue: 'Crop Science'
 link: 'https://doi.org/10.1002/csc2.20865'
 paperurl: '/files/publications/2022CS.pdf'
 code: 'https://zenodo.org/record/5911852'
-citation: 'Wigg, K.S., __Brainard__, S.H., Metz, N. et al. Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome. <i>Crop Sci</i> (2022). https://doi.org/10.1007/s00122-021-03988-8'
+citation: 'Wigg K.S., <strong>Brainard S.H.</strong>, Metz N., Dorn, K.M., and Goldman I.L. Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome. <i>Crop Sci</i> (2022). https://doi.org/10.1007/s00122-021-03988-8'
 ---
 
 
