fixing date format

--- a/_publications/2023-04-06_AH.md
+++ b/_publications/2023-04-06_AH.md
@@ -2,7 +2,7 @@
 title: "Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome"
 collection: publications
 permalink: /publication/2023_04-06
-date: 2023_04-06
+date: 2023-04-06
 venue: 'Acta Horticulturae'
 link: 
 paperurl: 
