fixing pub title

--- a/_publications/2023-04-06_AH.md
+++ b/_publications/2023-04-06_AH.md
@@ -1,5 +1,5 @@
 ---
-title: "Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome"
+title: "Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map"
 collection: publications
 permalink: /publication/2023_04-06
 date: 2023-04-06
@@ -7,6 +7,6 @@ venue: 'Acta Horticulturae'
 link: 
 paperurl: 
 code:
-citation: 'Scott H. Brainard, Jason A. Fischbach, Lois C. Braun, Julie C. Dawson, Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map <i>Acta Horticulturae</i> In press (2023)'
+citation: '<strong>Scott H. Brainard</strong>, Jason A. Fischbach, Lois C. Braun, Julie C. Dawson, Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Horticulturae</i> In press (2023)'
 ---
 
