--- a/_publications/2023-04-12_BA.md
+++ b/_publications/2023-04-12_BA.md
@@ -1,5 +1,5 @@
 ---
-title: The first two chromosome-scale genome assemblies of American hazelnut enable comparative genomic analysis of the genus Corylus"
+title: "The first two chromosome-scale genome assemblies of American hazelnut enable comparative genomic analysis of the genus Corylus"
 collection: publications
 permalink: /publication/2023-04-12_BA
 date: 2023-04-12
