updated pubs with doi

--- a/_publications/2023-04-06_AH.md
+++ b/_publications/2023-04-06_AH.md
@@ -4,9 +4,9 @@ collection: publications
 permalink: /publication/2023_04-06
 date: 2023-04-06
 venue: 'Acta Horticulturae'
-link: 
+link: https://doi.org/10.1101/2023.02.05.527175
 paperurl: 
 code:
-citation: '<strong>Scott H. Brainard</strong>, Jason A. Fischbach, Lois C. Braun, Julie C. Dawson, Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Horticulturae</i> In press (2023)'
+citation: '<strong>Scott H. Brainard</strong>, Jason A. Fischbach, Lois C. Braun, Julie C. Dawson, Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Horticulturae</i> In press (2023) https://doi.org/10.1101/2023.02.05.527175'
 ---
 
