updated publication naming scheme

--- a/_publications/2023_CS.md
+++ b/_publications/2023_CS.md
@@ -1,7 +1,7 @@
 ---
 title: "Novel QTL Associated with Rhizoctonia solani Kühn Resistance Identified in Two Table Beet x Sugar Beet F<sub>2:3</sub> Populations Using a New Table Beet Reference Genome"
 collection: publications
-permalink: /publication/2023-01-19_CS
+permalink: /publication/2023_CS
 date: 2023-01-19
 venue: 'Crop Science'
 link: 'https://doi.org/10.1002/csc2.20865'
