--- a/_publications/2023_TPJ.md
+++ b/_publications/2023_TPJ.md
@@ -1,7 +1,7 @@
 ---
 title: "The first two chromosome-scale genome assemblies of American hazelnut enable comparative genomic analysis of the genus Corylus"
 collection: publications
-permalink: /publication/2023-04-12_BA
+permalink: /publication/2023_TPJ
 date: 2023-04-12
 venue: 'bioRxiv'
 link:
