--- a/_publications/2021_FIPS.md
+++ b/_publications/2021_FIPS.md
@@ -1,7 +1,7 @@
 ---
 title: "A digital image-based phenotyping platform for analyzing root shape attributes in carrot"
 collection: publications
-permalink: /publication/2021-06-16_FIPS
+permalink: /publication/2021_FIPS
 date: 2021-06-16
 venue: 'Frontiers in Plant Science'
 link: 'https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full'
