--- a/_publications/2021_TAAG.md
+++ b/_publications/2021_TAAG.md
@@ -1,7 +1,7 @@
 ---
 title: "Genetic characterization of carrot root shape and size using genome-wide association analysis and genomic-estimated breeding values"
 collection: publications
-permalink: /publication/2021-11-15_TAAG
+permalink: /publication/2021_TAAG
 date: 2021-11-15
 venue: 'Theoretical and Applied Genetics'
 link: 'https://doi.org/10.1007/s00122-021-03988-8'
