--- a/_publications/2023_AH.md
+++ b/_publications/2023_AH.md
@@ -1,7 +1,7 @@
 ---
 title: "Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map"
 collection: publications
-permalink: /publication/2023_04-06
+permalink: /publication/2023AH
 date: 2023-04-06
 venue: 'Acta Horticulturae'
 link: https://doi.org/10.1101/2023.02.05.527175
