updated pub links

--- a/_publications/2021_FIPS.md
+++ b/_publications/2021_FIPS.md
@@ -4,9 +4,9 @@ collection: publications
 permalink: /publication/2021_FIPS
 date: 2021-06-16
 venue: 'Frontiers in Plant Science'
-link: 'https://www.frontiersin.org/articles/10.3389/fpls.2021.690031/full'
+link: 'https://doi.org/10.3389/fpls.2021.690031'
 code: 'https://dataverse.harvard.edu/dataverse/carrot-market-class'
 github: 'https://github.com/shbrainard/carrot-phenotyping'
 paperurl: '/files/publications/2021FIPS.pdf'
-citation: '<strong>Brainard S.H.</strong>, Bustamante J.A., Dawson J.C., Spalding E.P., and Goldman I.L. A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front. Plant Sci.</i> (2021) https://doi.org/10.3389/fpls.2021.690031'
+citation: '<strong>Brainard S.H.</strong>, Bustamante J.A., Dawson J.C., Spalding E.P., and Goldman I.L. A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front. Plant Sci.</i> (2021)'
 ---
