--- a/_publications/2023_AH.md
+++ b/_publications/2023_AH.md
@@ -2,11 +2,11 @@
 title: "Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map"
 collection: publications
 permalink: /publication/2023AH
-date: 2023-04-06
+date: 2023-04-22
 venue: 'Acta Horticulturae'
 link: https://doi.org/10.1101/2023.02.05.527175
-paperurl: 
-code:
+paperurl: '/files/publications/2023AH.pdf'
+code: https://doi.org/10.6084/m9.figshare.21902193
 citation: '<strong>Scott H. Brainard</strong>, Jason A. Fischbach, Lois C. Braun, Julie C. Dawson, Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Horticulturae</i> In press (2023)'
 ---
 
