updated AH manuscript with revisions

--- a/_publications/2023_TPJ.md
+++ b/_publications/2023_TPJ.md
@@ -6,7 +6,8 @@ date: 2023-04-24
 venue: 'bioRxiv'
 link:
 paperurl: 
-code: 
+code: 'https://zenodo.org/deposit/7439335'
+github: 'https://github.com/shbrainard/Camericana_pipelines'
 citation: '<strong>Scott H. Brainard</strong>, Dean M. Sanders, Tomas Bruna, Shu Shenqiang, Julie C. Dawson, The first two chromosome-scale genome assemblies of American hazelnut enable comparative genomic analysis of the genus Corylus. <i>In Preparation</i> (2023)'
 ---
 
