--- a/_publications/2023_AH2.md
+++ b/_publications/2023_AH2.md
@@ -1,13 +1,13 @@
 ---
-title: "QTL mapping utilizing F2:3 linkage mapping populations reveals regions of chromosomes 2 and 6 are significantly associated
+title: "QTL mapping utilizing F~2:3~ linkage mapping populations reveals regions of chromosomes 2 and 6 are significantly associated
 with root width in carrot"
 collection: publications
 permalink: /publication/2023AH2
-date: 2023-06-01
+date: 2023-03-01
 venue: 'Acta Horticulturae'
-link: ''
-paperurl: ''
+link:
+paperurl:
 code: 
-citation: 'Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F2:3 link-
+citation: 'Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F~2:3~ link-
 age mapping populations reveals regions of chromosomes 2 and 6 are significantly associated with root width in carrot. <i>Acta Horticulturae</i> Under review (2023)'
 ---
