--- a/_publications/2023_FIPS.md
+++ b/_publications/2023_FIPS.md
@@ -2,13 +2,10 @@
 title: "Form and contour: Breeding and genetics of organ shape from wild relatives to modern vegetable crops"
 collection: publications
 permalink: /publication/2023FIPS
-date: 2023-05-31
+date: 2023-03-02
 venue: 'Frontiers in Plant Science'
-link: ''
-paperurl: ''
+link:
+paperurl:
 code: 
 citation: 'Goldman, I.L., Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, McGregor, C., Oravec, M., van der Knaap, E., Wan, Y. Form and contour: Breeding and genetics of organ shape from wild relatives to modern vegetable crops. <i>Frontiers in Plant Science</i> Under review (2023)'
 ---
-
-Irwin L. Goldman, Andrey Vega-Alfaro, Scott H. Brainard, Cecilia McGregor, Madeline
-Oravec, Esther van der Knaap, Yanbing Wan
