--- a/_publications/2023_AH2.md
+++ b/_publications/2023_AH2.md
@@ -1,5 +1,5 @@
 ---
-title: "QTL mapping utilizing F~2:3~ linkage mapping populations reveals regions of chromosomes 2 and 6 are significantly associated
+title: "QTL mapping utilizing F<sub>2:3</sub> linkage mapping populations reveals regions of chromosomes 2 and 6 are significantly associated
 with root width in carrot"
 collection: publications
 permalink: /publication/2023AH2
@@ -8,6 +8,6 @@ venue: 'Acta Horticulturae'
 link:
 paperurl:
 code: 
-citation: 'Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F~2:3~ link-
+citation: 'Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F<sub>2:3</sub> link-
 age mapping populations reveals regions of chromosomes 2 and 6 are significantly associated with root width in carrot. <i>Acta Horticulturae</i> Under review (2023)'
 ---
