--- a/_publications/2023_AH2.md
+++ b/_publications/2023_AH2.md
@@ -9,5 +9,5 @@ link:
 paperurl:
 code: 
 citation: 'Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F<sub>2:3</sub> link-
-age mapping populations reveals regions of chromosomes 2 and 6 are significantly associated with root width in carrot. <i>Acta Horticulturae</i> Under review (2023)'
+age mapping populations reveals regions of chromosomes 2 and 6 are significantly associated with root width in carrot. <i>Acta Hort</i> Under review (2023)'
 ---
