--- a/_publications/2021_FIPS.md
+++ b/_publications/2021_FIPS.md
@@ -8,5 +8,5 @@ link: 'https://doi.org/10.3389/fpls.2021.690031'
 code: 'https://dataverse.harvard.edu/dataverse/carrot-market-class'
 github: 'https://github.com/shbrainard/carrot-phenotyping'
 paperurl: '/files/publications/2021FIPS.pdf'
-citation: '<strong>Brainard S.H.</strong>, Bustamante J.A., Dawson J.C., Spalding E.P., and Goldman I.L. A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front. Plant Sci.</i> (2021)'
+citation: '<strong>Brainard S.H.</strong>, Bustamante J.A., Dawson J.C., Spalding E.P., and Goldman I.L. A Digital Image-Based Phenotyping Platform for Analyzing Root Shape Attributes in Carrot. <i>Front Plant Sci</i> (2021)'
 ---
