--- a/_publications/2023_AH.md
+++ b/_publications/2023_AH.md
@@ -7,6 +7,6 @@ venue: 'Acta Horticulturae'
 link: 'https://doi.org/10.1101/2023.02.05.527175'
 paperurl: '/files/publications/2023AH.pdf'
 code: https://doi.org/10.6084/m9.figshare.21902193
-citation: '<strong>Brainard, S.H.</strong>, Fischbach, J.A., Braun, L.C., Dawson, J.C. Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Horticulturae</i> In press (2023)'
+citation: '<strong>Brainard, S.H.</strong>, Fischbach, J.A., Braun, L.C., Dawson, J.C. Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Hort</i> In press (2023)'
 ---
 
