--- a/_publications/2023_FIPS.md
+++ b/_publications/2023_FIPS.md
@@ -7,5 +7,5 @@ venue: 'Frontiers in Plant Science'
 link:
 paperurl:
 code: 
-citation: 'Goldman, I.L., Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, McGregor, C., Oravec, M., van der Knaap, E., Wan, Y. Form and contour: Breeding and genetics of organ shape from wild relatives to modern vegetable crops. <i>Front Plant Sci</i> Under review (2023)'
+citation: 'Goldman, I.L., Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, McGregor, C., Oravec, M., van der Knaap, E., Wan, Y. Form and contour: Breeding and genetics of organ shape from wild relatives to modern vegetable crops. <i>Front Plant Sci</i> Accepted (2023)'
 ---
