--- a/_publications/2023_FIPS.md
+++ b/_publications/2023_FIPS.md
@@ -4,8 +4,8 @@ collection: publications
 permalink: /publication/2023FIPS
 date: 2023-03-02
 venue: 'Frontiers in Plant Science'
-link:
-paperurl:
+link: 'https://doi.org/10.3389/fpls.2023.1257707'
+paperurl: '/files/publications/2023FIPS.pdf'
 code: 
-citation: 'Goldman, I.L., Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, McGregor, C., Oravec, M., van der Knaap, E., Wan, Y. Form and contour: Breeding and genetics of organ shape from wild relatives to modern vegetable crops. <i>Front Plant Sci</i> Accepted (2023)'
+citation: 'Goldman, I.L., Vega-Alfaro, A., <strong>Brainard, S.H.</strong>, McGregor, C., Oravec, M., van der Knaap, E., Wan, Y. Form and contour: Breeding and genetics of organ shape from wild relatives to modern vegetable crops. <i>Front Plant Sci</i> (2023)'
 ---
