pbj article accepted

--- a/_publications/2023_PBJ.md
+++ b/_publications/2023_PBJ.md
@@ -8,6 +8,6 @@ link:
 paperurl: 
 code: 'https://zenodo.org/deposit/7439335'
 github: 'https://github.com/shbrainard/Camericana_pipelines'
-citation: '<strong>Brainard, S.H.</strong>, Sanders, D.M., Bruna, T., Shengqiang, S., Dawson, J.C. The first two chromosome-scale genome assemblies of American hazelnut enable comparative genomic analysis of the genus Corylus. <i>Plant Biotechnol J</i> Under review (2023)'
+citation: '<strong>Brainard, S.H.</strong>, Sanders, D.M., Bruna, T., Shengqiang, S., Dawson, J.C. The first two chromosome-scale genome assemblies of American hazelnut enable comparative genomic analysis of the genus Corylus. <i>Plant Biotechnol J</i> Accepted (2023)'
 ---
 
