--- a/_publications/2024_G3.md
+++ b/_publications/2024_G3.md
@@ -2,10 +2,10 @@
 title: "Linkage mapping of root shape traits associated with market class in two carrot populations"
 collection: publications
 permalink: /publication/2024_G3
-date: 2024-01-15
+date: 2024-02-28
 venue: 'G3: Genes, Genomes, Genetics'
-link: ''
-paperurl: ''
+link: 'https://doi.org/10.1093/g3journal/jkae041'
+paperurl: '/files/publications/2024G3.pdf'
 code: 'https://zenodo.org/records/10023296'
 github: ''
 citation: 'Vega, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. Linkage mapping of root shape traits associated with market class in two carrot populations. <i>G3</i> (2024)'
