--- a/_publications/2023_AH.md
+++ b/_publications/2023_AH.md
@@ -4,9 +4,9 @@ collection: publications
 permalink: /publication/2023AH
 date: 2023-04-01
 venue: 'Acta Horticulturae'
-link: 'https://doi.org/10.1101/2023.02.05.527175'
+link: 'https://doi.org/10.17660/ActaHortic.2023.1379.20'
 paperurl: '/files/publications/2023AH.pdf'
 code: https://doi.org/10.6084/m9.figshare.21902193
-citation: '<strong>Brainard, S.H.</strong>, Fischbach, J.A., Braun, L.C., Dawson, J.C. Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Hort</i> In press (2023)'
+citation: '<strong>Brainard, S.H.</strong>, Fischbach, J.A., Braun, L.C., Dawson, J.C. Improving selection efficiency in C. americana × C. avellana interspecific hybrids through the development of an indel-based genetic map. <i>Acta Hort</i> (2023)'
 ---
 
