--- a/_publications/2024_AH.md
+++ b/_publications/2024_AH.md
@@ -6,5 +6,5 @@ date: 2023-04-01
 venue: 'Acta Horticulturae'
 link: 'https://doi.org/10.17660/ActaHortic.2024.1393.24'
 paperurl: '/files/publications/2024AH.pdf'
-citation: 'Vega, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F2:3 linkage mapping populations reveals regions of chromosomes 2 and 6 are significantly associated with root width in carrot. <i>Acta Hort.</i> (2024)'
+citation: 'Vega, A., <strong>Brainard, S.H.</strong>, Goldman, I.L. QTL mapping utilizing F<sub>2:3</sub> linkage mapping populations reveals regions of chromosomes 2 and 6 are significantly associated with root width in carrot. <i>Acta Hort.</i> (2024)'
 ---
